--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 
- <script src="./assets/js/1_funcion.js"></script>   
+ <script src="./assets/js/1_funcion.js"></script>  
+ <script src="./assets/js/2_arrow.js"></script>
 </body>
 </html>
