--- a/pintar.html
+++ b/pintar.html
@@ -6,6 +6,11 @@
     <title>Pintar objeto</title>
 </head>
 <body>
-    
+    <div id="ele1"><p>Hello</p></div>
+
+
+
+
+<script src="./assets/js/script.js"></script>r    
 </body>
 </html>
