--- a/pintar.html
+++ b/pintar.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pintar objeto</title>
 </head>
 <body>
-    <div id="ele1"><p>Hello</p></div>
+    <div id="ele1">
+        <p>Hello</p>
+    </div>
 
 
 
 
-<script src="./assets/js/script.js"></script>r    
+<script src="./assets/js/script.js"></script>    
 </body>
 </html>
